
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [2.17.0] - 2024-02-20

### Changed
- ADT implementation and AXO (AXOL1TL) with models.

### Added
- CICADA and TOPO with models implementation.
- depending on tm-python 0.12.0 (#43).
- depending on tm-reporter 2.12.0

## [2.16.0] - 2023-10-10

### Changed
- replaced deprecated `setup.py` file with `setup.cfg` file (#41).

## [2.15.1] - 2023-10-05

### Changed
- changed value for "brams" in "floor" (resource_default.json)

## [2.15.0] - 2023-09-26

### Added
- default value (module = 0) for `zdc` constraints

## [2.14.2] - 2023-06-15

### Fixed
- condition constraint command line argument

## [2.14.1] - 2023-06-06

### Added
- type `zdc` to condition constraints

### Fixed
- broken condition constraints

## [2.14.0] - 2023-03-13

### Added
- support for MUS2, ZDC, ADT, muon index cut

### Changed
- depending on tm-python 0.11.2
- depending on tm-reporter 2.11.3

## [2.13.2] - 2022-12-14

### Added
- changed values for "floor" in resource_default.json (3 additional quads used for ZDC conversion in MP7)

### Changed
- resource_default.json

## [2.13.1] - 2022-11-16

### Changed
- bug fix in template ("muon_mass_3_obj_condition.vhd": missing generic parameters)

## [2.13.0] - 2022-08-25

### Added
- improved resource calculation

### Changed
- algodist.py and resource_default.json

## [2.12.1] - 2022-03-21

### Changed
- bug fix in templates ("calo_conditions_orm.vhd" and "esums_condition.vhd")
- updated comment in template ("ugt_constants.vhd")

## [2.12.0] - 2021-12-06

### Added
- support for displaced jets

### Changed
- depending on tm-python 0.10.0
- depending on tm-reporter 2.10.1

## [2.11.1] - 2021-10-12

### Changed
- refactored resource calculation

## [2.11.0] - 2021-06-11

### Changed
- mp7_ugt_legacy v1.15.0
- refactored VHDL instance templates