@@ -15,3 +15,6 @@ ignore_missing_imports = true
 
 [mypy-jinja2.*]
 ignore_missing_imports = true
+
+[mypy-schema.*]
+ignore_missing_imports = true
