@@ -1,4 +1,5 @@
 Jinja2==2.11.*
 markupsafe==2.0.*
+schema==0.7.5
 tm-python @ git+https://github.com/cms-l1-globaltrigger/tm-python@0.12.0
 tm-reporter @ git+https://github.com/cms-l1-globaltrigger/tm-reporter@2.12.0
